# github-connector

./: README.md  main.py  pyproject.toml
github_connector/: client.py  custom_exceptions.py
tests/: test_client.py
